# Noterm

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  PLAN.md  README.md  TESTING.md  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  error.rs  main.rs
src/db/: migrations.rs  mod.rs
src/export/: kazam.rs  mod.rs
src/git/: mod.rs  operations.rs
src/import/: api.rs  meetily.rs  mod.rs  watcher.rs
src/kazam/: kb_browser.rs  mcp_client.rs  mod.rs
src/llm/: claude.rs  context.rs  mod.rs  ollama.rs  openai.rs  summarizer.rs
src/notes/: annotations.rs  freshness.rs  frontmatter.rs  markdown.rs  mod.rs  watcher.rs
src/search/: fulltext.rs  mod.rs  vector.rs
src/tasks/: kanban.rs  mod.rs
src/tui/: keys.rs  layout.rs  mod.rs  renderer.rs
src/tui/widgets/: annotation_panel.rs  chat_panel.rs  confirm_delete.rs  editor.rs  file_tree.rs  freshness_panel.rs  git_panel.rs  help_popup.rs  kanban.rs  kazam_kb_panel.rs  meetily_panel.rs  mod.rs  search_overlay.rs  settings_panel.rs  status_bar.rs  summary_panel.rs  vector_search.rs  viewer.rs
